--- a/experiments/mcq.ipynb
+++ b/experiments/mcq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "75819380",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "b8680c3b",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "19e35bec",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "6ac22a96",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "61959f80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import getpass\n",
+    "import os\n",
+    "\n",
+    "if not os.getenv(\"DEEPSEEK_API_KEY\"):\n",
+    "    os.environ[\"DEEPSEEK_API_KEY\"] = getpass.getpass(\"sk-4f66aca8c5f54dcdbbf971cc1a5cd418\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "dd70615d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (1475749222.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    DEEPSEEK_API_KEY=KEY\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm = ChatDeepSeek(\n",
+    "    DEEPSEEK_API_KEY=KEY\n",
+    "    model=\"deepseek-chat\",\n",
+    "    temperature=0.5\n",
+    "   \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a6d2e4",
    "metadata": {},
    "outputs": [],
    "source": []
