--- a/experiments/mcq.ipynb
+++ b/experiments/mcq.ipynb
@@ -48,58 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "6ac22a96",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sk-4f66aca8c5f54dcdbbf971cc1a5cd418\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(KEY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61959f80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import getpass\n",
-    "import os\n",
-    "\n",
-    "if not os.getenv(\"DEEPSEEK_API_KEY\"):\n",
-    "    os.environ[\"DEEPSEEK_API_KEY\"] = getpass.getpass(\"sk-4f66aca8c5f54dcdbbf971cc1a5cd418\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "dd70615d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (1475749222.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    DEEPSEEK_API_KEY=KEY\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
-     ]
-    }
-   ],
-   "source": [
-    "llm = ChatDeepSeek(\n",
-    "    DEEPSEEK_API_KEY=KEY\n",
-    "    model=\"deepseek-chat\",\n",
-    "    temperature=0.5\n",
-    "   \n",
-    ")"
+    "# print(KEY)"
    ]
   },
   {
