--- a/experiments/rag-assistant.ipynb
+++ b/experiments/rag-assistant.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0b54a254-4ad8-40fe-9688-c7111dc99718",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "594c225f",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "307e8db1",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "77d0c871-a504-4b23-a462-b3400b6863e7",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "b1cdad3c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "d62e8db2-a565-4c0e-b7a4-a34bd8db52d1",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "ab5edd9f-f0aa-4577-83f9-65a02585a266",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "a32e6362-fb21-4d53-8542-aa88a0654195",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "1b869fad-2085-4782-8e39-3d5b22ced3be",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "cff8552e-7838-43e7-8b7c-e1e39414e00b",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "2c065e11-9571-45cf-8b91-918388215a27",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "fcda9b96-854e-43d2-a744-90de81375854",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "0b1ef0dc-8908-40ad-aef1-eba4f315fbbf",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "492da945-1052-4b12-9d60-43568513554d",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "3b9417df-97c2-408f-80d7-75172bb64d7b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "8727b018-b58e-4f43-8421-739683d18a2c",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "c1e40c9e-6591-48f8-b38a-0145daed7c00",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "e6e3fdc7-797a-4535-8f65-66b2bfaef8f5",
    "metadata": {},
    "outputs": [],
@@ -239,12 +239,12 @@
     "docs = create_documents_from_texts(texts)\n",
     "\n",
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "splits = text_splitter.split_documents(docs)\n"
+    "splits = text_splitter.split_documents(docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "id": "1fa1e59e-919c-41d0-8339-1463d6b7860e",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "[Document(metadata={'source': 'doc_0'}, page_content='2025 Indian Premier League\\nDates 22 March – 3 June 2025\\nAdministrator(s)Board of Control for\\nCricket in India\\nCricket format Twenty20\\nTournament\\nformat(s)Group stage and playoffs\\nChampions Royal Challengers\\nBengaluru (1st title)\\nRunners-up Punjab Kings\\nParticipants 10\\nMatches 74\\nMost valuable\\nplayerSuryakumar Yadav\\n(Mumbai Indians)\\nMost runs Sai Sudharsan (Gujarat\\nTitans) (759)\\nMost wickets Prasidh Krishna (Gujarat\\nTitans) (25)\\nOfﬁcial website iplt20.com (http://iplt20.co\\nm)\\n2025 Indian Premier League\\nThe 2025 Indian Premier League , also known as IPL 18 and\\nbranded as TATA IPL 2025 , was the 18th edition of the Indian Premier\\nLeague . The tournament featured 10 teams  competing in 74 matches. It\\nbegan on 22 March and was held across 13 venues before being\\nsuspended on 9 May due to the 2025 India and Pakistan crisis . The\\nmatches resumed from 17 May across six venues, and the final  was\\nrescheduled from 25 May to 3 June.')]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "id": "99c1b959-26e0-4a31-bedf-3631bd11808f",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "id": "4337807b-03fc-48a2-ada0-1ac72bbd5811",
    "metadata": {},
    "outputs": [],
@@ -288,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "id": "131cce9b-1db8-4595-b9bf-6c297e452580",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "VectorStoreRetriever(tags=['Chroma', 'GoogleGenerativeAIEmbeddings'], vectorstore=<langchain_chroma.vectorstores.Chroma object at 0x1241783d0>, search_kwargs={})"
+       "VectorStoreRetriever(tags=['Chroma', 'GoogleGenerativeAIEmbeddings'], vectorstore=<langchain_chroma.vectorstores.Chroma object at 0x10f0e3700>, search_kwargs={})"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "id": "1b1b9d33-d6a2-4fbc-8e94-bc81bf10e208",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "id": "52993b9b-aa72-46c8-a531-e19e3764bcc0",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "id": "ca875fff-5efc-47eb-9043-c706efdcc193",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "id": "e2f43538-2564-4cae-92ee-449398db11b3",
    "metadata": {},
    "outputs": [],
@@ -361,23 +361,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "id": "6482b070-6740-4bb3-beee-7c7728bcf307",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Virat Kohli scored 43 runs in the final match of IPL 2025.  Royal Challengers Bangalore won the match by 6 runs.  The match was played on June 3, 2025.'"
+       "'The provided text mentions Priyansh Arya scoring 70 runs in one match and Ashutosh Sharma scoring 66* runs in another.  There is no information on who scored the most runs overall in IPL 2025.'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rag_chain.invoke({\"input\": \"how much runs did virat scored in final match of ipl 2025?\"})[\"answer\"]"
+    "rag_chain.invoke({\"input\": \"who scored leading runs in whole ipl 2025?\"})[\"answer\"]"
    ]
   },
   {
@@ -422,187 +422,6 @@
    ],
    "source": [
     "print(rag_chain.invoke({\"input\": \"provide 4 questions of general knowledge with their answers\"})[\"answer\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "7b1d42be-76df-4d42-a86c-ec8b11c8cff3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mcq_prompt = \"\"\"\n",
-    "You are an expert question generator.\n",
-    "\n",
-    "Given the following context, generate {num_questions} multiple-choice questions (MCQs). Follow these rules:\n",
-    "- Each question should be directly based on the context.\n",
-    "- Provide 4 options labeled A to D.\n",
-    "- Clearly state the correct answer with \"Answer: <option letter>\".\n",
-    "- Keep questions clear, factual, and non-repetitive.\n",
-    "\n",
-    "### Context:\n",
-    "{context}\n",
-    "\n",
-    "### Output format:\n",
-    "1. <Question text>\n",
-    "A. <Option A>\n",
-    "B. <Option B>\n",
-    "C. <Option C>\n",
-    "D. <Option D>\n",
-    "Answer: <Correct Option>\n",
-    "\n",
-    "Generate the questions now.\n",
-    "\"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "1d61970c-1a65-42cd-b2a1-53c06bb2acca",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/v3/hj2d2g150gld7k2cm6q9d9gh0000gn/T/ipykernel_2270/2344766643.py:9: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
-      "  llm_chain = LLMChain(prompt=prompt, llm=model)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import LLMChain\n",
-    "\n",
-    "prompt = PromptTemplate(\n",
-    "    input_variables=[\"context\", \"num_questions\"],\n",
-    "    template=mcq_prompt\n",
-    ")\n",
-    "\n",
-    "llm_chain = LLMChain(prompt=prompt, llm=model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "c79b02b8-9d9e-4dec-9cb1-4861c3c070e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "context_text = \"about ipl 2025\"\n",
-    "\n",
-    "response = llm_chain.invoke({\n",
-    "    \"context\": context_text,\n",
-    "    \"num_questions\": 5,\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "ec0e2b54-e967-45cb-810c-8845f42896f7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Since the provided context \"about ipl 2025\" is extremely vague,  I will have to make assumptions to create meaningful multiple-choice questions.  These questions will focus on plausible aspects of an IPL 2025 season, acknowledging the lack of concrete information.\n",
-      "\n",
-      "1. Which of the following is a MOST likely change to the IPL 2025 format compared to previous seasons?\n",
-      "A. A reduction in the number of teams.\n",
-      "B. The introduction of a new playoff system.\n",
-      "C. A significant shortening of the regular season.\n",
-      "D. The elimination of the auction process for player selection.\n",
-      "Answer: B\n",
-      "\n",
-      "2.  Speculation suggests a potential increase in the IPL 2025 media rights revenue. What is the MOST likely driver for this increase?\n",
-      "A. A decrease in the overall viewership.\n",
-      "B. Reduced broadcasting costs.\n",
-      "C. Increased global interest and viewership.\n",
-      "D. A decline in sponsorship deals.\n",
-      "Answer: C\n",
-      "\n",
-      "3.  Considering the usual player transfer dynamics, which of the following scenarios is MOST likely for IPL 2025?\n",
-      "A. All teams retaining the exact same squads as 2024.\n",
-      "B. Significant player movement due to the auction and trades.\n",
-      "C. A complete ban on player transfers between teams.\n",
-      "D. A reduction in the number of overseas players allowed per team.\n",
-      "Answer: B\n",
-      "\n",
-      "4.  Which of these is a potential challenge the IPL 2025 organizers might face?\n",
-      "A. An abundance of readily available sponsorship opportunities.\n",
-      "B. An oversupply of high-quality international players.\n",
-      "C. Maintaining consistent viewership across various time zones.\n",
-      "D. A lack of interest from potential investors.\n",
-      "Answer: C\n",
-      "\n",
-      "5.  If a new team were to be added to the IPL in 2025, which of the following factors would be MOST influential in selecting its location?\n",
-      "A. Proximity to existing teams.\n",
-      "B. The team's historical performance in previous seasons.\n",
-      "C. The potential for a large and engaged fan base.\n",
-      "D. The team's owner's personal preference.\n",
-      "Answer: C\n",
-      "\n",
-      "\n",
-      "**Important Note:** These answers are based on reasonable assumptions about the IPL.  Actual details for IPL 2025 are not yet publicly available, so these questions and answers are speculative but plausible.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(response[\"text\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "2e4473b5-a5b2-4dcb-9901-fff781f28bc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "context_text = \"about black hole\"\n",
-    "\n",
-    "response = llm_chain.invoke({\n",
-    "    \"context\": context_text,\n",
-    "    \"num_questions\": 3,\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "9c8d62c0-d2a0-48d6-9e69-0f129782cc4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. What is a black hole?\n",
-      "A. A type of star that is extremely hot and bright.\n",
-      "B. A region of spacetime with gravity so strong that nothing, not even light, can escape.\n",
-      "C. A massive planet with a very dense atmosphere.\n",
-      "D. A large cloud of gas and dust in space.\n",
-      "Answer: B\n",
-      "\n",
-      "2.  Which characteristic of a black hole prevents even light from escaping?\n",
-      "A. Its extremely low temperature.\n",
-      "B. Its intense magnetic field.\n",
-      "C. Its incredibly strong gravitational pull.\n",
-      "D. Its rapid rotation.\n",
-      "Answer: C\n",
-      "\n",
-      "3. What is the point of no return for a black hole called?\n",
-      "A. Event horizon\n",
-      "B. Singularity\n",
-      "C. Schwarzschild radius\n",
-      "D. Accretion disk\n",
-      "Answer: A\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(response[\"text\"])"
    ]
   },
   {
